Updated App.jsx + Logout + NavBar + GettingStarted to rerender page to correct routes instead of having to refresh page manually

--- a/gymtracker/src/components/GettingStarted/GettingStarted.css
+++ b/gymtracker/src/components/GettingStarted/GettingStarted.css
@@ -1,4 +1,26 @@
-.your-centered-div{
-    display: block;
+/* .your-centered-div{
     margin: 0 auto;
+    width: 50%;
+    min-width: 300px;
+    height: 60%;
+} */
+
+.image{
+    justify-content: space-between;
+    width: 100%;
 }
+
+/* .video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+  }
+
+  .video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  } */
